unpackaged/main/default/objects/Project_Change__c/Project_Change__c.object-meta.xml
<CustomObject>
    <label>Project Change</label>
    <nameField>
        <displayFormat>CHG-{0000}/{MMYY}</displayFormat>
        <label>Project Change Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>