unpackaged/main/default/objects/Project_Change__c/fields/DateRequested__c.field-meta.xml
<CustomField>
    <fullName>DateRequested__c</fullName>
    <description>Date the requirement was requested</description>
    <inlineHelpText>Date the requirement was requested</inlineHelpText>
    <label>Date Requested</label>
    <type>Date</type>
</CustomField>