unpackaged/main/default/objects/Project_Change__c/fields/ImpactTimeDays__c.field-meta.xml
<CustomField>
    <fullName>ImpactTimeDays__c</fullName>
    <description>Working Days required</description>
    <inlineHelpText>Working days required</inlineHelpText>
    <label>Impact Time (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>