unpackaged/main/default/objects/Project_Change__c/fields/NewRequirement__c.field-meta.xml
<CustomField>
    <fullName>NewRequirement__c</fullName>
    <description>New requirement from CR, additional requirement or future requirement</description>
    <inlineHelpText>New requirement from CR, additional requirement or future requirement</inlineHelpText>
    <label>New Requirement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>