unpackaged/main/default/objects/Project_Change__c/fields/OriginalRequirement__c.field-meta.xml
<CustomField>
    <fullName>OriginalRequirement__c</fullName>
    <description>The original requirement before the change request</description>
    <inlineHelpText>The original requirement before the change request</inlineHelpText>
    <label>Original Requirement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>