unpackaged/main/default/objects/Project_Change__c/fields/RequestedBy__c.field-meta.xml
<CustomField>
    <fullName>RequestedBy__c</fullName>
    <description>Who requested the requirement</description>
    <inlineHelpText>Who requested the requirement?</inlineHelpText>
    <label>Requested By</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>