unpackaged/main/default/objects/Project_Change__c/fields/RequirementTypePick__c.field-meta.xml
<CustomField>
    <fullName>RequirementTypePick__c</fullName>
    <description>Type of requirement</description>
    <inlineHelpText>Type of requirement</inlineHelpText>
    <label>Requirement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additional Requirement</fullName>
            </value>
            <value>
                <fullName>Change Request</fullName>
            </value>
            <value>
                <fullName>Future Phase</fullName>
            </value>
            <value>
                <fullName>Investigate Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>