unpackaged/main/default/objects/Project_Change__c/validationRules/P_CHG_VR1_MustProvideChangeDetails.validationRule-meta.xml
<ValidationRule>
    <fullName>P_CHG_VR1_MustProvideChangeDetails</fullName>
    <active>false</active>
    <description>User must provide change details if the type is 'Change Request'</description>
    <errorConditionFormula>AND(OriginalRequirement__c ="",
ISPICKVAL(RequirementTypePick__c, "Change Request"))</errorConditionFormula>
    <errorDisplayField>OriginalRequirement__c</errorDisplayField>
    <errorMessage>Please provide the original requirement</errorMessage>
</ValidationRule>